tried to resolve overflow hidden bug

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,18 +1,15 @@
-/* Hide the scrollbar */
-.main::-webkit-scrollbar {
+/* .main::-webkit-scrollbar {
   width: 0;
   background: transparent;
 }
 
-/* Hide the scrollbar track */
 .main::-webkit-scrollbar-track {
   background: transparent;
 }
 
-/* Hide the scrollbar thumb */
 .main::-webkit-scrollbar-thumb {
   background: transparent;
-}
+} */
 
 .opening {
   height: 300vh;
